--- a/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/Components/Layout/MainLayout.razor
+++ b/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/Components/Layout/MainLayout.razor
@@ -91,7 +91,7 @@
 					<ul class="footer-links">
 						<li><a href="https://github.com/TheAnsarya/GameInfo" target="_blank" rel="noopener">GitHub</a>
 						</li>
-						<li><a href="/docs/contributing">Contributing</a></li>
+						<li><a href="/contribute">Contributing</a></li>
 						<li><a href="/about">About</a></li>
 					</ul>
 				</div>
