--- a/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/Components/Layout/MainLayout.razor
+++ b/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/Components/Layout/MainLayout.razor
@@ -83,6 +83,7 @@
 					<ul class="footer-links">
 						<li><a href="/tools">Tools</a></li>
 						<li><a href="/docs">Documentation</a></li>
+						<li><a href="/downloads">Downloads</a></li>
 						<li><a href="https://games.darkrepos.com" target="_blank" rel="noopener">Wiki</a></li>
 					</ul>
 				</div>
