--- a/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/Components/App.razor
+++ b/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/Components/App.razor
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="@Assets["css/design-system.css"]" />
 	<link rel="stylesheet" href="@Assets["css/layout.css"]" />
 	<link rel="stylesheet" href="@Assets["DarkRepos.Web.styles.css"]" />
+	<link rel="stylesheet" href="@Assets["css/print.css"]" media="print" />
 	<ImportMap />
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<link rel="manifest" href="manifest.json" />
