feat(web): Add keyboard shortcuts module
- "/" opens search modal (global shortcut)
- "Esc" closes modals and clears focus
- "?" shows keyboard shortcuts help
- API for registering custom shortcuts
- Properly ignores shortcuts when typing in inputs

--- a/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/Components/App.razor
+++ b/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/Components/App.razor
@@ -27,6 +27,7 @@
 	<Routes @rendermode="InteractiveAuto" />
 	<ReconnectModal />
 	<script src="@Assets["_framework/blazor.web.js"]"></script>
+	<script src="@Assets["js/keyboard-shortcuts.js"]"></script>
 </body>
 
 </html>
